deploy/server/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knodex-server
  labels:
    app.kubernetes.io/name: knodex
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: knodex
    app.kubernetes.io/component: server
